deployments/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-ccw-fees-service-deployment
  labels:
    app: laa-ccw-fees-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laa-ccw-fees-service # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: laa-ccw-fees-service # this should match the selector in service.yml
    spec:
      containers:
        - name: laa-ccw-fees-service
          image: ${REGISTRY}/${REPOSITORY}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            runAsUser: 1001
